{
    "version": 1,
    "name": "EditorBlockSceneControls",
    "maps": [
        {
            "name": "InputAdapterPC",
            "id": "fbb860a4-9f87-45a8-81c7-bd04c4ba80a3",
            "actions": [
                {
                    "name": "IsChangeLook",
                    "type": "Button",
                    "id": "6783eb80-e409-419d-8d2c-317e186cb752",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7b7d43e4-cd1f-4d56-92e7-e5aeaf0a2b21",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "baa2af41-e40a-4962-b3eb-18a0e1f0fad6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "550da683-9136-47b3-97af-ef5b66d3c14d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3cb9dff-efa5-4fed-9aa4-e0118856cded",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "223a715b-8f13-432c-bdeb-ec0a14d1a8e4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4fd9a14-eec1-4aef-a2bb-e79ff0721c28",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsChangeLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31820f7a-7bd1-4d0a-aea3-a105c3ce0780",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IsChangeLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputAdapterVR",
            "id": "dcf7de13-ad99-4457-b67c-392c536e4f44",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "076a79c8-8aeb-438a-8d33-bc64a1a25607",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "08be7aa4-7e9f-44f9-9dac-f7c07d9fcee6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8288cdbd-86a9-45b9-8590-ff7b7a0b8790",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf64ecdd-58a4-4b98-b228-a682fbff609d",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InputAdapterVRMenu",
            "id": "7d327157-c803-4933-9b57-7e5cfcae9814",
            "actions": [
                {
                    "name": "LeftHandClick",
                    "type": "Button",
                    "id": "398a234a-a0f9-4d41-b026-7a152b64b889",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHandClick",
                    "type": "Button",
                    "id": "c9042930-c64c-404f-8ddb-1f9e031ea0b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4695866-462d-4f73-a914-55fde4bf69a0",
                    "path": "<XRController>{LeftHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8938c2e-855a-4d1c-b51f-ff4fe327a279",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c596729e-46ab-4f77-8843-f26efec0d3b9",
                    "path": "<XRController>{RightHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}